# brave-core

./: .gitignore  BUILD.gn  CONTRIBUTING.md  DEPS  README.md  brave_env.cmd  brave_env.sh  chromium_presubmit_config.json5  package-lock.json  package.json
.storybook/: manager.js
android/: brave_java_resources.gni  brave_java_sources.gni  xml_processor.py
app/: access_code_cast_strings.grdp  app_management_strings.grdp  bookmarks_strings.grdp  brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  file_manager_strings.grdp  generated_resources.grd  generated_resources_override.grd  media_router_strings.grdp  nux_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  password_manager_ui_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_brave_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  vr_strings.grdp  welcome_strings.grdp
browser/: about_flags.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_content_browser_client_unittest.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  brave_resources_browsertest.cc  brave_resources_util_unittest.cc  brave_scheme_load_browsertest.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
common/: brave_channel_info_unittest.cc  brave_content_client_unittest.cc
components/leo/browser/resources/: BUILD.gn
patches/: base-BUILD.gn.patch  (+85 more)
(+1120 files in other folders)
