# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")

# leo_components = [
#   "button"
# ]

transpile_web_ui("leo_components") {
  entry_points = [ [
    "button",
    rebase_path("//brave/node_modules/@brave/leo/react/button.js")
  ] ]

  resource_name = "leo_components"
}

pack_web_resources("generated_resources") {
  resource_name = "leo_components"
  output_dir = "$root_gen_dir/brave/components/leo/browser/resources"
  deps = [ ":leo_components" ]
}
